--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
+# Eureka Client Configuration
+
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
-
-# Eureka client configuration
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
